# gnome-calculator

./: .cvsignore  .gitignore  .gitlab-ci.yml  AUTHORS  ChangeLog  ChangeLog-1990  ChangeLog-1991  ChangeLog-1992  ChangeLog-1993  ChangeLog-2002  ChangeLog-NG  FIXME  MAINTAINERS  Makefile.am  NEWS  README  README.md  RELEASE-HOWTO  TODO  autogen.sh  configure.ac  configure.in  fix.function-crash.patch  gcalctool.desktop.in  gcalctool.doap  gcalctool.schemas  gcalctoolrc  gnome-calculator.doap  meson.build  meson_options.txt  org.gnome.Calculator.Devel.json  org.gnome.Calculator.json
data/: .gitignore  Makefile.am  buttons-advanced.ui  buttons-basic.ui  buttons-financial.ui  buttons-programming.ui  calculator.css  dialogs.ui  financial.ui  gcalccmd.1  gcalctool.1  gcalctool.appdata.xml.in  gcalctool.desktop.in  gcalctool.schemas.in  gcalctool.ui  gcalctoolrc  gnome-calculator.1  gnome-calculator.appdata.xml  gnome-calculator.appdata.xml.in  gnome-calculator.desktop.in  gnome-calculator.gresource.xml  history-entry.ui  history-view.ui  math-converter.ui  math-function-popover.ui  math-shortcuts.ui  math-window.ui  menu.ui  meson.build  org.gnome.Calculator.appdata.xml.in  org.gnome.Calculator.desktop.in  org.gnome.Calculator.metainfo.xml.in  org.gnome.calculator.gschema.xml  org.gnome.calculator.gschema.xml.in  org.gnome.gcalctool.gschema.xml.in  preferences.ui
data/icons/: Makefile.am
doc/: meson.build
gcalc/: gcalc-assign.vala  gcalc-binary-operator.vala  gcalc-calculator.vala  gcalc-constant.vala  gcalc-currency.vala  gcalc-division.vala  gcalc-equation-lexer.vala  gcalc-equation-manager.vala  gcalc-equation-parser.vala  gcalc-equation.vala  gcalc-error-result.vala  gcalc-expression-container.vala  gcalc-expression-hash-map.vala  gcalc-expression.vala  gcalc-function-acos.vala  gcalc-function-acosh.vala  gcalc-function-asin.vala  gcalc-function-asinh.vala  gcalc-function-atan.vala  gcalc-function-atanh.vala  gcalc-function-cos.vala  gcalc-function-cosh.vala  gcalc-function-exp.vala  gcalc-function-log.vala  gcalc-function-sin.vala  gcalc-function-sinh.vala  gcalc-function-sqrt.vala  gcalc-function-tan.vala  gcalc-function-tanh.vala  gcalc-function.vala  gcalc-gassign.vala  gcalc-gconstant.vala  gcalc-gdivision.vala  gcalc-gerror-result.vala  gcalc-gexpression.vala  gcalc-gfunction.vala  gcalc-ggroup.vala  gcalc-gmath-equation-manager.vala  gcalc-gmath-equation.vala  gcalc-gminus.vala  (+57 more)
gcalctool/: .cvsignore  .gitignore  Makefile.am  calctool.1  calctool.c  calctool.h  ce_parser.c  ce_parser.h  ce_parser.tab.h  ce_parser.y  ce_tokeniser.l  color.h  display.c  display.h  display_frame.c  display_frame.h  dsdefs.h  dsfuns.c  extern.h  financial.c  financial.h  functions.c  functions.h  gcalctool.1  get.c  get.h  graphics.c  graphics.h  gtk.c  lr_parser.c  lr_parser.h  lr_parser.tab.h  lr_parser.y  lr_tokeniser.l  mp-binary.c  mp-boolean.c  mp-convert.c  mp-internal.h  mp-trigonometric.c  mp.c  (+18 more)
gci/: gci-entry-controller.vala  gci.deps.in  gci.pc.in  meson.build  namespace-info.vala.in
help/: ChangeLog  LINGUAS  Makefile.am  gcalctool-bg.omf  gcalctool-zh_CN.omf  gcalctool-zh_HK.omf  gcalctool-zh_TW.omf  gcalctool.omf.in  meson.build
help/C/: .cvsignore  Makefile.am  absolute.page  base.page  boolean.page  complex.page  conv-base.page  conv-currency.page  conv-length.page  conv-time.page  conv-weight.page  equation.page  factorize.page  financial.page  functions.page  gcalctool-C.omf  gcalctool.xml  history.page  index.page  keyboard.page  l10n.txt  logarithm.page  mode-programming.page  modulus.page  mouse.page  number-display.page  percentage.page  power.page  rounding.page  scientific.page  superscript.page  trigonometry.page  variables.page
help/bg/: Makefile.am  bg.po  gcalctool-bg.omf  gcalctool.xml  legal.xml
help/ca/: ca.po
help/cs/: cs.po
help/da/: da.po
help/de/: Makefile  Makefile.am  Makefile.in  de.po  gcalctool-de.omf  gcalctool-de.omf.out  gcalctool.xml  legal.xml
help/el/: el.po
help/es/: Makefile  Makefile.am  Makefile.in  es.po  gcalctool-es.omf  gcalctool-es.omf.out  gcalctool.xml  legal.xml
help/eu/: eu.po
help/fi/: fi.po
help/fr/: .cvsignore  Makefile  Makefile.am  Makefile.in  fr.po  gcalctool-fr.omf  gcalctool-fr.omf.out  gcalctool.xml
help/gl/: gl.po
help/hu/: hu.po
help/id/: id.po
help/it/: Makefile  Makefile.am  Makefile.in  gcalctool-it.omf  gcalctool-it.omf.out  gcalctool.xml  it.po  legal.xml
lib/: Makefile.am  config.vapi  currency-provider.vala  currency.vala  equation-lexer.vala  equation-parser.vala  equation.vala  financial.vala  function-manager.vala  math-equation.vala  math-function.vala  math-variables.vala  meson.build  mpc.vapi  mpfr-glue.vala  mpfr.vapi  number.vala  serializer.vala  unit-manager.vala  unit.vala
libmpfr/: meson.build
search-provider/: Makefile.am  meson.build  org.gnome.Calculator-search-provider.ini  org.gnome.Calculator.SearchProvider.service.in  search-provider.vala
src/: .gitignore  Makefile.am  buttons-advanced.ui  buttons-advanced.vala  buttons-basic.vala  buttons-conversion.vala  buttons-financial.vala  buttons-programming.ui  buttons-programming.vala  calctool.c  calctool.h  calculator.css  ce_parser.y  config.vapi  currency-manager.c  currency-manager.h  currency.c  currency.h  currency.vala  display.c  display.h  dsdefs.h  equation-lexer.vala  equation-parser.vala  equation.vala  financial.c  financial.h  financial.vala  fixes.vapi  function-manager.vala  functions.c  functions.h  gcalccmd.c  gcalccmd.vala  gcalctool.c  gcalctool.vala  get.c  get.h  gnome-calculator.gresource.xml  gnome-calculator.vala  (+98 more)
tests/: Makefile.am  advanced_mode.feature  basic_mode.feature  common_steps.py  environment.py  financial_mode.feature  gcalc-main-interfaces.vala  gcalc-parsing.vala  gcalc-solving-basic.vala  gci-test-entry-controller.blp  gci-test-entry-controller.ui  meson.build  programming_mode.feature  rms_five.xls  test-currency-providers.vala  test-entry-controller.gresource.xml  test-equation.vala  test-gci-entry-controller.vala  test-number.vala  test-serializer.vala
(+234 files in other folders)
