option('disable-ui', type : 'boolean', value : false, description : 'Disable GTK+ program')
option('vala-version', type: 'string', value : '', description : 'Use another version of Vala (only the latest is officially supported)')
option('disable-introspection', type : 'boolean', value : false, description : 'Disable GObject Introspection Typelib generation')
option('ui-tests', type : 'boolean', value : false, description : 'Execute UI tests: requires X/Wayland/Broadway/Windows server')
